# MSc-thesis---Dependency-injection-in-serverless-scenarios

./: README.md
InvokerACL/src/: main.rs
InvokerFunction/: Cargo.toml  log.txt
InvokerFunction/src/: log4rs.yml  main.rs
InvokerLOG/: Cargo.toml
InvokerLOG/src/: main.rs
InvokerService/: Cargo.toml  Dockerfile
InvokerService/src/: main.rs
RUST_stresser/: Cargo.toml
RUST_stresser/src/: main.rs
RustSyncInvokerNats/: Cargo.toml  Dockerfile  README.md  build.Dockerfile
RustSyncInvokerNats/examples/: main.js  return_code.rs
RustSyncInvokerNats/src/: main.rs
RustSyncInvokerNats/test/: main.js
Trigger/http-trigger/: Cargo.toml  config.json
first-arch-go/: go.sum
first-arch-go/injector/: Injector.go
first-arch-java/: build.gradle  log.txt  settings.gradle
first-arch-js/: Injector.js  handler_acl.js  handler_log.js  logs.txt
first-architecture/InvokerACL/: Cargo.toml  Dockerfile
first-architecture/InvokerACL/function/ACL-js-function/: accessControl.js
first-architecture/InvokerACL/src/: main.rs
first-architecture/InvokerLOG/: Cargo.toml  Dockerfile
first-architecture/Invokers/dependency-providers/InvokerLOG/: Cargo.toml  Dockerfile
first-architecture/Invokers/dependency-providers/InvokerLOG/function/LOG-js-function/: logger.js
first-architecture/Invokers/dependency-providers/InvokerLOG/src/: main.rs
first-architecture/Trigger/http-trigger/: Cargo.toml  config.json
first-architecture/Trigger/http-trigger/src/: log4rs.yml  main.rs  nats_pool.rs
first-architecture/logs/: first_arch_constant_workload.ipynb  first_arch_incremental_workload.ipynb  logs_first_arch_go_1_invoker_constant110.txt  logs_first_arch_go_1_invoker_constant90.txt  logs_first_arch_go_2_invoker_constant110.txt  logs_first_arch_go_2_invoker_constant90.txt  (+32 more)
http-trigger/: Dockerfile
second-architecture/InvokerStaticInjection/invoker/: Cargo.toml
second-architecture/InvokerStaticInjection/invoker/go/example-function/acl/: go.mod  handler_acl.go
second-architecture/InvokerStaticInjection/invoker/go/example-function/log/: handler_log.go
second-architecture/InvokerStaticInjection/invoker/src/: main.rs
(+138 files in other folders)
