[package]
name = "invoker"
version = "0.1.0"
authors = ["sabbio93 <sabbio.a93@localhost>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats= "0.25.0"
quicli= "0.4.0"
tokio = { version = "1.41.1", features = ["full"] }
