[package]
name = "invoker_acl"
version = "0.1.0"
authors = ["FabioGentili99 <fabiogentili20@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats= "0.25.0"
quicli= "0.4.0"
tokio = { version = "1.41.1", features = ["full"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
bincode= "1.3.3"