[package]
name = "http-trigger"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
nats = "0.25.0"
env_logger = "0.11.6"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
dashmap = "6.1.0"
serde = "1.0.217"
serde_json = "1.0.138"
log = "0.4.25"
actix-web-prom = "0.9.0"
log4rs = "1.3.0"