[package]
name = "invoker"
version = "0.1.0"
authors = ["FabioGentili99 <fabiogentili20@gmail.com>"]
edition = "2021"

[dependencies]
async-nats= "0.39"
quicli= "0.4.0"
tokio = { version = "1.41.1", features = ["full"] }
log= "0.4.0"
log4rs= "1.3.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
futures = "0.3.31"
once_cell = "1.20.3"